Fixed error caused by overflow in styling

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,24 +28,10 @@ Colors:
 /******************************/
 /*     01. General Styles     */
 /******************************/
-
-
-#imageSize {
-	vertical-align: middle;
-	background-color: blue;
-}
-
-
-
-
-
-
-
 body,
 html {
     width: 100%;
 	height: 100%;
-	overflow: hidden;
 }
 
 body, p {
